Update currentSize in Screen::apply

BUG: 352001
FIXED-IN: 5.4.1
REVIEW: 124992